--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -139,6 +139,26 @@ h2 {
 
 }
 
+.no-side-padding {
+
+	padding-left: 0;
+	padding-right: 0;
+
+}
+
+.no-left-padding {
+
+	padding-left: 0 !important;
+
+}
+
+.no-right-padding {
+
+	padding-right: 0 !important;
+}
+
+
+
 
 
 
