--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,25 +27,25 @@
 							</ul>
 						</div>
 					<p>
-						<%= link_to 'Sign Up', new_user_registration_path(plan: 'free'), class: 'btn btn-primary sign-up' %>
+						<%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary sign-up' %>
 					</p>
 			</div>
 
-		<div class="col-lg-3 plan">
-				<h2>Premium Plan</h2>
+			<div class="col-lg-3 plan">
+					<h2>Premium Plan</h2>
 
-				<div class="price pull-right">
-				Price: $10
-				</div>
+					<div class="price pull-right">
+					Price: $10
+					</div>
 
-				<div class="features">
-					<ul>
-						<li>Unlimited file uploads</li>
-						<li>Responsive design</li>
-						<li>Access anywhere</li>
-						<li class='extra'>Unlimited projects</li>
-					</ul>
-				</div>
+					<div class="features">
+						<ul>
+							<li>Unlimited file uploads</li>
+							<li>Responsive design</li>
+							<li>Access anywhere</li>
+							<li class='extra'>Unlimited projects</li>
+						</ul>
+					</div>
 				<p>
 					<%= link_to 'Sign Up', new_user_registration_path(plan: 'premium'), class: 'btn btn-primary sign-up' %>
 				</p>
