--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Workhorseapp</a>
+        <a class="navbar-brand" href="/">Workhorseapp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            link_to "Link3", "/path3"  %></li>
+            <% if current_user %>
+              <li>
+                <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe,
+                new_member_path,
+                class: 'navbar-link btn btn-primary' %>
+              </li>
+            <% end %>
           </ul>
           <ul class="nav navbar-right col-md-4">
             <% if current_user %>
@@ -53,13 +59,7 @@
         <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
-        </div>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
+        </div>      
       </div><!--/row-->
 
       <footer>
