--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,7 +113,6 @@ h2 {
 	border: 1px solid #e7e7e7;
 	border-radius: 5px;
 	margin-right: 5px;
-
 }
 
 .price {
@@ -141,17 +140,32 @@ h2 {
 
 }
 
+.no-right-padding {
+	margin-top: 18px;
+	padding-right: 0 !important;
+	
+}
+
 .no-left-padding {
 	padding-left: 0 !important;
 
 }
 
-.no-right-padding {
-	padding-right: 0 !important;
+
+
+
+.table tr td {
+	a.main-link {
+	color: #428bca;
+
 }
 
+a.main-link:hover {
+	background: none;
 
+}
 
+}
 
 
 
