--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,15 +31,16 @@
             <% if current_user %>
               <li>
                 <%= link_to "<i class='fa fa-users'></i> Add Members".html_safe,
-                new_member_path,
-                class: 'navbar-link btn btn-primary' %>
+                            new_member_path,
+                            class: 'navbar-link btn btn-primary' %>
               </li>
             <% end %>
           </ul>
           <ul class="nav navbar-right col-md-4">
             <% if current_user %>
               <li class="col-md-8 user-name">
-                <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe, edit_user_registration_path, title: 'Edit Profile' %>
+                <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe, 
+                            edit_user_registration_path, title: 'Edit Profile' %>
               </li>
               <li class="col-md-1"> </li>
 
