--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,37 +1,42 @@
-<%= form_with(model: project, local: true) do |form| %>
-  <% if project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+<%= form_for [@tenant, @project], :html => { :class => "form-horizontal project" } do |f| %>
 
-      <ul>
-      <% project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @project.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @project.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :project_title %>
+  <div class="form-group">
+      <%= f.label :title, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :title, :class => 'form-control' %>
+    </div>
   </div>
+  <div class="form-group">
+      <%= f.label :description, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :description, :class => 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+      <%= f.label :expected_completion_date, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :expected_completion_date, :class => 'form-control' %>
+    </div>
+  </div>
+  <br />
+    <%= f.hidden_field :tenant_id, value: params[:tenant_id], :class => 'form-control' %>
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")), 
+            root_path, :class => 'btn btn-default' %>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description, id: :project_description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :expected_completion_date %>
-    <%= form.date_select :expected_completion_date, id: :project_expected_completion_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :tenant_id %>
-    <%= form.text_field :tenant_id, id: :project_tenant_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
