--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,5 @@
+<br/>
+<br />
 <%= form_for [@tenant, @project], :html => { :class => "form-horizontal project" } do |f| %>
 
   <% if @project.errors.any? %>
@@ -27,10 +29,10 @@
       <%= f.text_field :description, :class => 'form-control' %>
     </div>
   </div>
-  <div class="form-group">
-      <%= f.label :expected_completion_date, :class => 'control-label col-lg-2' %>
+    <div class="form-group">
+        <%= f.label :expected_completion_date, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :expected_completion_date, :class => 'form-control' %>
+          <%= f.text_field :expected_completion_date, :class => 'form-control datepicker' %>
     </div>
   </div>
   <br />
@@ -40,3 +42,5 @@
             root_path, :class => 'btn btn-default' %>
 
 <% end %>
+
+
