--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,8 @@
 <%- model_class = Project -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<div class="panel-body">  
+  <h1><%=t '.title', :default => [:'helpers.titles.create', 'Create %{model}'], :model => model_class.model_name.human.titleize %></h1>
 </div>
+<br />
 <%= render :partial => 'form' %>
