--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,21 +7,27 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @project.title %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @project.description %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:details) %>:</strong></dt>
+  <dd><%= @project.details %></dd>
   <dt><strong><%= model_class.human_attribute_name(:expected_completion_date) %>:</strong></dt>
   <dd><%= @project.expected_completion_date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:tenant_id) %>:</strong></dt>
   <dd><%= @project.tenant_id %></dd>
 </dl>
+<h3>Artifacts</h3>
+<%= render 'artifacts/list', artifacts: @project.artifacts %>
+<br />
+<br />
 
-<%= link_to '< Back to Organization Home', root_path, :class => 'btn btn-default' %>
+<%= link_to '< Back to Organization Home', root_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
-            edit_tenant_project_path(project: @project, tenant: @project.tenant_id), 
-            :class => 'btn btn-default' %>
+              edit_tenant_project_path(project: @project, tenant: @project.tenant_id), 
+              :class => 'btn btn-default' %>
+<%= link_to 'Edit Project Users', users_tenant_project_path(tenant_id: @project.tenant_id, id: @project.id),
+              :class => 'btn btn-default' %>
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-            tenant_project_path(@project, @project.tenant_id),
-            :method => 'delete',
-            :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm",
-            :default => 'Are you sure?')) },
-            :class => 'btn btn-danger' %>
+              tenant_project_path(@project, @project.tenant_id),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", 
+              :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
